--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 set-window-option -g mode-keys vi
 
 # enable mouse scrolling
-set mouse on
+set -g mouse on
 
 # notifications - hope it doesn't break anything else
 set -g focus-events on
