chores: added some themes

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,12 +1,28 @@
 # theme = 0x96f
+# theme = Builtin Dark
+# theme = carbonfox
+# theme = catppuccin-mocha
+# theme = CGA
+# theme = Dark+
 # theme = darkmatrix
 # theme = Dimidium
+# theme = deep
 # theme = FirefoxDev
 # theme = Framer
-theme = GitHub Dark
+# theme = GitHub Dark
+# theme = GitHub-Dark-Default
 # theme = Hardcore
+# theme = Harper
+# theme = iceberg-dark
+# theme = iTerm2 Dark Background
+# theme = Konsolas
+# theme = Mathias
 # theme = matrix
+# theme = Monokai Remastered
+# theme = Monokai Soda
+theme = N0tch2k
 # theme = Oxocarbon
+# theme = Raycast_Dark
 # theme = rose-pine
 # theme = Shaman
 # theme = Wryan
