chores: using rose-pine for now

--- a/ghostty/config
+++ b/ghostty/config
@@ -20,10 +20,10 @@
 # theme = matrix
 # theme = Monokai Remastered
 # theme = Monokai Soda
-theme = N0tch2k
+# theme = N0tch2k
 # theme = Oxocarbon
 # theme = Raycast_Dark
-# theme = rose-pine
+theme = rose-pine
 # theme = Shaman
 # theme = Wryan
 
