feat: fast root path setting

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,8 +11,12 @@ set -g mouse on
 set -g focus-events on
 
 # fast reload
+unbind M-r
+bind M-r source ~/.config/tmux/tmux.conf
+
+# fast root path setting
 unbind r
-bind r source ~/.config/tmux/tmux.conf
+bind r attach-session -c "#{pane_current_path}"
 
 # pane navigation
 unbind left
