feat: screenshot shortcut

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -284,6 +284,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# screenshot
+bind = $mainMod, S, exec, hyprshot -m active -m window -- feh
+bind = $mainMod SHIFT, S, exec, hyprshot -m active -m window --clipboard-only
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
