feat: scratchpad terminal

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,6 +18,10 @@ bind M-r source ~/.config/tmux/tmux.conf
 unbind r
 bind r attach-session -c "#{pane_current_path}"
 
+# scratch terminal
+unbind g
+bind g popup
+
 # pane navigation
 unbind left
 unbind right
