fix: keymap conflict + switch to chrome

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor=HDMI-A-1,1920x1080@144,auto-right,1
 
 # Set programs that you use
 $terminal = ghostty
-$browser = firefox
+$browser = google-chrome-stable
 $menu = tofi-run | xargs hyprctl dispatch exec
 
 
@@ -285,7 +285,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # screenshot
-bind = $mainMod, S, exec, hyprshot -m active -m window -- feh
+bind = $mainMod ALT, S, exec, hyprshot -m active -m window -- feh
 bind = $mainMod SHIFT, S, exec, hyprshot -m active -m window --clipboard-only
 
 
