chores: auto changes

--- a/nchat/ui.conf
+++ b/nchat/ui.conf
@@ -8,7 +8,7 @@ desktop_notify_active=
 desktop_notify_command=
 desktop_notify_inactive=1
 downloadable_indicator=+
-emoji_enabled=0
+emoji_enabled=1
 entry_height=4
 failed_indicator=✗
 file_picker_command=
@@ -43,3 +43,4 @@ top_enabled=0
 top_show_version=1
 transfer_send_caption=1
 typing_status_share=1
+unread_indicator=*
