--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,7 +9,6 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-
 ################
 ### MONITORS ###
 ################
@@ -19,7 +18,6 @@ monitor=DP-2,1920x1080@144,0x0,1
 monitor=DP-3,1920x1080@144,auto-left,1
 monitor=HDMI-A-1,1920x1080@144,auto-right,1
 
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -28,7 +26,7 @@ monitor=HDMI-A-1,1920x1080@144,auto-right,1
 
 # Set programs that you use
 $terminal = ghostty
-$browser = google-chrome-stable
+$browser = google-chrome-stable --password-store=basic
 $menu = tofi-run | xargs hyprctl dispatch exec
 
 
@@ -55,8 +53,9 @@ env = HYPRCURSOR_SIZE,40
 env = XCURSOR_SIZE,24
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia
+# env = GBM_BACKEND,nvidia => BUG: not working anymore??
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
 
 
 #####################
@@ -113,7 +112,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -241,10 +240,10 @@ bind = $mainMod SHIFT, J, movewindow, d
 bind=$mainMod,R,submap,resize # will switch to a submap called resize
 
 submap=resize # will start a submap called "resize"
-bind=,l,resizeactive,10 0
-bind=,h,resizeactive,-10 0
-bind=,k,resizeactive,0 -10
-bind=,j,resizeactive,0 10
+binde=,l,resizeactive,10 0
+binde=,h,resizeactive,-10 0
+binde=,k,resizeactive,0 -10
+binde=,j,resizeactive,0 10
 bind=,escape,submap,reset # use reset to go back to the global submap
 submap=reset # will reset the submap, meaning end the current one and return to the global one.
 
