--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,6 +2,8 @@
 # Refer to the wiki for more information.
 # https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
 
+ecosystem:no_update_news = true
+
 # Please note not all available settings / options are set here.
 # For a full list, see the wiki
 
@@ -173,9 +175,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
