--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,9 +16,10 @@ ecosystem:no_update_news = true
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-2,1920x1080@144,0x0,1
-monitor=DP-3,1920x1080@144,auto-left,1
-monitor=HDMI-A-1,1920x1080@144,auto-right,1
+# monitor=DP-2,1920x1080@144,0x0,1
+# monitor=DP-3,1920x1080@144,auto-left,1
+# monitor=HDMI-A-1,1920x1080@144,auto-right,1
+monitor = eDP-1, 1920x1080@60, 0x0, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -40,8 +41,10 @@ $menu = tofi-run | xargs hyprctl dispatch exec
 # Or execute your favorite apps at launch like this:
 
 exec-once = mako
-exec-once = [workspace 3] $terminal
+exec-once = batsignal
+exec-once = [workspace 2 silent] $terminal
 exec-once = [workspace 1 silent] $browser
+exec-once = [workspace 10] 1password
 exec-once = systemctl --user start hyprpolkitagent
 
 #############################
@@ -53,12 +56,6 @@ exec-once = systemctl --user start hyprpolkitagent
 env = HYPRCURSOR_THEME,"Future-Cyan-Hyprcursor_Theme"
 env = HYPRCURSOR_SIZE,40
 env = XCURSOR_SIZE,24
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-# env = GBM_BACKEND,nvidia => BUG: not working anymore??
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = NVD_BACKEND,direct
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -158,7 +155,7 @@ cursor {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant =
+    kb_variant = dvorak
     kb_model =
     kb_options =
     kb_rules =
@@ -172,6 +169,12 @@ input {
     touchpad {
         natural_scroll = false
     }
+}
+
+device {
+    name = cradio-keyboard
+    kb_layout = us
+    kb_variant = 
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
@@ -210,13 +213,13 @@ bind = $mainMod, M, fullscreen, 1
 # (non working commented out)
 # l -> do stuff even when locked
 # e -> repeats when key is held 
-# bindle=, XF86AudioRaiseVolume, exec, vol --up
-# bindle=, XF86AudioLowerVolume, exec, vol --down
-# bindle=, XF86MonBrightnessUp, exec, bri --up
-# bindle=, XF86MonBrightnessDown, exec, bri --down
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_SINK@ 10%+
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_SINK@ 10%-
+bindle=, XF86MonBrightnessUp, exec, brightnessctl set +10%
+bindle=, XF86MonBrightnessDown, exec, brightnessctl set 10%-
 # bindle=, XF86Search, exec, $menu
 # bindl=, XF86AudioMute, exec, amixer set Master toggle
-# bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl=, XF86AudioPlay, exec, playerctl play-pause # the stupid key is called play , but it toggles 
 bindl=, XF86AudioNext, exec, playerctl next 
 bindl=, XF86AudioPrev, exec, playerctl previous
@@ -250,28 +253,28 @@ bind=,escape,submap,reset # use reset to go back to the global submap
 submap=reset # will reset the submap, meaning end the current one and return to the global one.
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, A,          workspace, 1
-bind = $mainMod, O,          workspace, 2
-bind = $mainMod, E,          workspace, 3
-bind = $mainMod, U,          workspace, 4
-bind = $mainMod, I,          workspace, 5
-bind = $mainMod, apostrophe, workspace, 6
-bind = $mainMod, comma,      workspace, 7
-bind = $mainMod, period,     workspace, 8
-bind = $mainMod, P,          workspace, 9
-bind = $mainMod, Y,          workspace, 10
+bind = $mainMod, 1,          workspace, 1
+bind = $mainMod, 2,          workspace, 2
+bind = $mainMod, 3,          workspace, 3
+bind = $mainMod, 4,          workspace, 4
+bind = $mainMod, 5,          workspace, 5
+bind = $mainMod, 6, 	     workspace, 6
+bind = $mainMod, 7,          workspace, 7
+bind = $mainMod, 8,          workspace, 8
+bind = $mainMod, 9,          workspace, 9
+bind = $mainMod, 0,          workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, A,          movetoworkspace, 1
-bind = $mainMod SHIFT, O,          movetoworkspace, 2
-bind = $mainMod SHIFT, E,          movetoworkspace, 3
-bind = $mainMod SHIFT, U,          movetoworkspace, 4
-bind = $mainMod SHIFT, I,          movetoworkspace, 5
-bind = $mainMod SHIFT, apostrophe, movetoworkspace, 6
-bind = $mainMod SHIFT, comma,      movetoworkspace, 7
-bind = $mainMod SHIFT, period,     movetoworkspace, 8
-bind = $mainMod SHIFT, P,          movetoworkspace, 9
-bind = $mainMod SHIFT, Y,          movetoworkspace, 10
+bind = $mainMod SHIFT, 1,          movetoworkspace, 1
+bind = $mainMod SHIFT, 2,          movetoworkspace, 2
+bind = $mainMod SHIFT, 3,          movetoworkspace, 3
+bind = $mainMod SHIFT, 4,          movetoworkspace, 4
+bind = $mainMod SHIFT, 5,          movetoworkspace, 5
+bind = $mainMod SHIFT, 6,	   movetoworkspace, 6
+bind = $mainMod SHIFT, 7,          movetoworkspace, 7
+bind = $mainMod SHIFT, 8,          movetoworkspace, 8
+bind = $mainMod SHIFT, 9,          movetoworkspace, 9
+bind = $mainMod SHIFT, 0,          movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 # bind = $mainMod, Y, togglespecialworkspace, magic
@@ -294,16 +297,16 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m active -m window --clipboard-only
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-workspace=1,monitor:DP-3,default:true
-workspace=2,monitor:DP-3
-workspace=3,monitor:DP-2,default:true
-workspace=4,monitor:HDMI-A-1
-workspace=5,monitor:HDMI-A-1,default:true
-workspace=6,monitor:DP-3
-workspace=7,monitor:DP-3
-workspace=8,monitor:DP-2
-workspace=9,monitor:HDMI-A-1
-workspace=10,monitor:HDMI-A-1
+# workspace=1,monitor:DP-3,default:true
+# workspace=2,monitor:DP-3
+# workspace=3,monitor:DP-2,default:true
+# workspace=4,monitor:HDMI-A-1
+# workspace=5,monitor:HDMI-A-1,default:true
+# workspace=6,monitor:DP-3
+# workspace=7,monitor:DP-3
+# workspace=8,monitor:DP-2
+# workspace=9,monitor:HDMI-A-1
+# workspace=10,monitor:HDMI-A-1
 
 windowrule = suppressevent maximize, class:.* # You'll probably like this.
 windowrule = center, class:^(1Password)$
