--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -175,6 +175,13 @@ device {
     name = cradio-keyboard
     kb_layout = us
     kb_variant = 
+    kb_model =
+    kb_options =
+    kb_rules =
+
+    enabled = true
+    keybinds = true
+    resolve_binds_by_sym = 1
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
