--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -220,8 +220,8 @@ bind = $mainMod, M, fullscreen, 1
 # (non working commented out)
 # l -> do stuff even when locked
 # e -> repeats when key is held 
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_SINK@ 10%+
-bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_SINK@ 10%-
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_SINK@ 10%+ -l 1.0
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_SINK@ 10%- -l 1.0
 bindle=, XF86MonBrightnessUp, exec, brightnessctl set +10%
 bindle=, XF86MonBrightnessDown, exec, brightnessctl set 10%-
 # bindle=, XF86Search, exec, $menu
