--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,10 @@ set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{25
 
 set-window-option -g mode-keys vi
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # enable mouse scrolling
 set -g mouse on
 
