--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,6 +47,9 @@ exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 10] 1password
 exec-once = systemctl --user start hyprpolkitagent
 
+# lock
+exec-once = hyprlock || hyprctl dispatch exit
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -90,7 +93,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.8
+    inactive_opacity = 1.0
 
     shadow {
         enabled = true
