--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,9 +40,11 @@ $menu = tofi-run | xargs hyprctl dispatch exec
 # Or execute your favorite apps at launch like this:
 
 exec-once = mako
-exec-once = [workspace 3] $terminal
-exec-once = [workspace 1 silent] $browser
+exec-once = hyprlock || hyprctl dispatch exit
 exec-once = systemctl --user start hyprpolkitagent
+exec-once = [workspace 5] $terminal
+exec-once = [workspace 1] $browser
+exec-once = [workspace 9] 1password
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -250,32 +252,30 @@ bind=,escape,submap,reset # use reset to go back to the global submap
 submap=reset # will reset the submap, meaning end the current one and return to the global one.
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, A,          workspace, 1
-bind = $mainMod, O,          workspace, 2
-bind = $mainMod, E,          workspace, 3
-bind = $mainMod, U,          workspace, 4
-bind = $mainMod, I,          workspace, 5
-bind = $mainMod, apostrophe, workspace, 6
-bind = $mainMod, comma,      workspace, 7
-bind = $mainMod, period,     workspace, 8
-bind = $mainMod, P,          workspace, 9
-bind = $mainMod, Y,          workspace, 10
+bind = $mainMod, 1,  workspace, 1
+bind = $mainMod, 2,  workspace, 2
+bind = $mainMod, 3,  workspace, 3
+bind = $mainMod, 4,  workspace, 4
+bind = $mainMod, 5,  workspace, 5
+bind = $mainMod, 6,  workspace, 6
+bind = $mainMod, 7,  workspace, 7
+bind = $mainMod, 8,  workspace, 8
+bind = $mainMod, 9,  workspace, 9
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, A,          movetoworkspace, 1
-bind = $mainMod SHIFT, O,          movetoworkspace, 2
-bind = $mainMod SHIFT, E,          movetoworkspace, 3
-bind = $mainMod SHIFT, U,          movetoworkspace, 4
-bind = $mainMod SHIFT, I,          movetoworkspace, 5
-bind = $mainMod SHIFT, apostrophe, movetoworkspace, 6
-bind = $mainMod SHIFT, comma,      movetoworkspace, 7
-bind = $mainMod SHIFT, period,     movetoworkspace, 8
-bind = $mainMod SHIFT, P,          movetoworkspace, 9
-bind = $mainMod SHIFT, Y,          movetoworkspace, 10
+bind = $mainMod SHIFT, 1,  workspace, 1
+bind = $mainMod SHIFT, 2,  workspace, 2
+bind = $mainMod SHIFT, 3,  workspace, 3
+bind = $mainMod SHIFT, 4,  workspace, 4
+bind = $mainMod SHIFT, 5,  workspace, 5
+bind = $mainMod SHIFT, 6,  workspace, 6
+bind = $mainMod SHIFT, 7,  workspace, 7
+bind = $mainMod SHIFT, 8,  workspace, 8
+bind = $mainMod SHIFT, 9,  workspace, 9
 
 # Example special workspace (scratchpad)
-# bind = $mainMod, Y, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, Y, movetoworkspace, special:magic
+bind = $mainMod, 0, togglespecialworkspace, magic
+bind = $mainMod SHIFT, 0, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -296,14 +296,13 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m active -m window --clipboard-only
 
 workspace=1,monitor:DP-3,default:true
 workspace=2,monitor:DP-3
-workspace=3,monitor:DP-2,default:true
-workspace=4,monitor:HDMI-A-1
-workspace=5,monitor:HDMI-A-1,default:true
-workspace=6,monitor:DP-3
-workspace=7,monitor:DP-3
-workspace=8,monitor:DP-2
+workspace=3,monitor:DP-3
+workspace=4,monitor:DP-2
+workspace=5,monitor:DP-2,default:true
+workspace=6,monitor:DP-2
+workspace=7,monitor:HDMI-A-1
+workspace=8,monitor:HDMI-A-1
 workspace=9,monitor:HDMI-A-1
-workspace=10,monitor:HDMI-A-1
 
 windowrule = suppressevent maximize, class:.* # You'll probably like this.
 windowrule = center, class:^(1Password)$
