feat: transparent background ghostty

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,10 +16,11 @@ ecosystem:no_update_news = true
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=DP-2,1920x1080@144,0x0,1
+monitor=,preferred,auto-up,auto
 # monitor=DP-3,1920x1080@144,auto-left,1
 # monitor=HDMI-A-1,1920x1080@144,auto-right,1
 monitor = eDP-1, 1920x1080@60, 0x0, 1
+monitor = HDMI-A-1,preferred,auto,auto,mirror,eDP-1
 
 ###################
 ### MY PROGRAMS ###
@@ -104,7 +105,7 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
 
