--- a/ghostty/config
+++ b/ghostty/config
@@ -40,3 +40,7 @@ window-decoration = false
 window-padding-x = 8
 window-padding-y = 8
 window-padding-balance = true
+
+# background
+background-opacity = 0.30
+background-blur = 0
