feat: custom theme

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -43,6 +43,7 @@ $menu = tofi-run | xargs hyprctl dispatch exec
 
 exec-once = mako
 exec-once = batsignal
+exec-once = hyprpaper
 exec-once = [workspace 2 silent] $terminal
 exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 10] 1password
@@ -75,7 +76,9 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # col.active_border = rgba(e198f4ee) rgba(be69f2ee) 45deg
+    col.active_border = rgba(7c6ef8ee) rgba(5b82f5ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
