--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -34,7 +34,8 @@ input-field {
     outline_thickness = 3
     inner_color = rgba(0, 0, 0, 0.0) # no fill
 
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
+    outer_color = rgba(7c6ef8ee) rgba(5b82f5ee) 45deg
     check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
     fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
 
@@ -66,8 +67,8 @@ label {
     font_size = 90
     font_family = $font
 
-    position = -30, 0
-    halign = right
+    position = 0, -150
+    halign = center
     valign = top
 }
 
@@ -78,8 +79,8 @@ label {
     font_size = 25
     font_family = $font
 
-    position = -30, -150
-    halign = right
+    position = 0, -300
+    halign = center
     valign = top
 }
 
