feat: new image viewer

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -303,7 +303,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # screenshot
-bind = $mainMod ALT, S, exec, hyprshot -m active -m window -- feh
+bind = $mainMod ALT, S, exec, hyprshot -m active -m window -- imv
 bind = $mainMod SHIFT, S, exec, hyprshot -m active -m window --clipboard-only
 
 
