--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -43,7 +43,6 @@ $menu = tofi-run | xargs hyprctl dispatch exec
 
 exec-once = mako
 exec-once = hyprpaper
-exec-once = hyprlock || hyprctl dispatch exit
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = [workspace 5] $terminal
 exec-once = [workspace 1] $browser
@@ -276,7 +275,7 @@ bind = $mainMod, 6, 	       workspace, 6
 bind = $mainMod, 7,          workspace, 7
 bind = $mainMod, 8,          workspace, 8
 bind = $mainMod, 9,          workspace, 9
-bind = $mainMod, 0,          workspace, 10
+# bind = $mainMod, 0,          workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1,          movetoworkspace, 1
@@ -288,7 +287,7 @@ bind = $mainMod SHIFT, 6,	         movetoworkspace, 6
 bind = $mainMod SHIFT, 7,          movetoworkspace, 7
 bind = $mainMod SHIFT, 8,          movetoworkspace, 8
 bind = $mainMod SHIFT, 9,          movetoworkspace, 9
-bind = $mainMod SHIFT, 0,          movetoworkspace, 10
+# bind = $mainMod SHIFT, 0,          movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, 0, togglespecialworkspace, magic
