--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,11 +16,9 @@ ecosystem:no_update_news = true
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto-up,auto
-# monitor=DP-3,1920x1080@144,auto-left,1
-# monitor=HDMI-A-1,1920x1080@144,auto-right,1
-monitor = eDP-1, 1920x1080@60, 0x0, 1
-monitor = HDMI-A-1,preferred,auto,auto,mirror,eDP-1
+monitor = DP-2, 1920x1080@144, 0x0, 1
+monitor=DP-3,1920x1080@144,auto-left,1
+monitor=HDMI-A-1,1920x1080@144,auto-right,1
 
 ###################
 ### MY PROGRAMS ###
@@ -43,6 +41,7 @@ $menu = tofi-run | xargs hyprctl dispatch exec
 
 exec-once = mako
 exec-once = hyprpaper
+exec-once = hyprlock
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = [workspace 5] $terminal
 exec-once = [workspace 1] $browser
@@ -178,7 +177,7 @@ input {
 }
 
 device {
-    name = cradio-keyboard
+    name = zmk-project-cradio-keyboard
     kb_layout = us
     kb_variant = 
     kb_model =
