--- a/nchat/key.conf
+++ b/nchat/key.conf
@@ -13,7 +13,7 @@ delete_chat=\33\144
 delete_line_after_cursor=KEY_CTRLK
 delete_line_before_cursor=KEY_CTRLW
 delete_msg=KEY_CTRLX
-down=KEY_CTRLD
+down=KEY_CTRLN
 edit_msg=KEY_CTRLZ
 end=KEY_END
 end_line=KEY_CTRLE
@@ -30,7 +30,7 @@ jump_quoted=\33\161
 kill_word=\4001006
 left=KEY_LEFT
 linebreak=KEY_RETURN
-next_chat=KEY_CTRLN
+next_chat=KEY_CTRLD
 next_page=KEY_NPAGE
 ok=KEY_CTRLY
 open=KEY_CTRLO
@@ -38,7 +38,7 @@ open_link=KEY_CTRLL
 open_msg=\33\167
 other_commands_help=KEY_CTRLV
 paste=\33\166
-prev_chat=KEY_CTRLP
+prev_chat=KEY_CTRLU
 prev_page=KEY_PPAGE
 quit=KEY_CTRLQ
 react=KEY_CTRLR
@@ -57,4 +57,4 @@ toggle_list=KEY_NONE
 toggle_top=KEY_NONE
 transfer=KEY_CTRLT
 unread_chat=KEY_CTRLF
-up=KEY_CTRLU
+up=KEY_CTRLP
