feat: tmux sessionizer keybind

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,6 +29,10 @@ bind r attach-session -c "#{pane_current_path}"
 unbind g
 bind g popup
 
+# session fzf
+unbind t
+bind t run-shell "tmux neww $HOME/.config/zsh/sessionizer"
+
 # pane navigation
 unbind left
 unbind right
