feat: sort dirs first

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -43,12 +43,9 @@ exec-once = mako
 exec-once = hyprpaper
 exec-once = hyprlock
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = [workspace 5] $terminal
-exec-once = [workspace 1] $browser
+exec-once = [workspace 5 silent] $terminal
+exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 9] 1password
-
-# lock
-exec-once = hyprlock || hyprctl dispatch exit
 
 #############################
 ### ENVIRONMENT VARIABLES ###
