--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -41,15 +41,14 @@ $menu = tofi-run | xargs hyprctl dispatch exec
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+exec-once = hyprlock || hyprctl dispatch exit
 exec-once = mako
 exec-once = hyprpaper
+exec-once = batsignal
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = [workspace 5] $terminal
-exec-once = [workspace 1] $browser
+exec-once = [workspace 5 silent] $terminal
+exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 9] 1password
-
-# lock
-exec-once = hyprlock || hyprctl dispatch exit
 
 #############################
 ### ENVIRONMENT VARIABLES ###
