--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,7 +18,7 @@ ecosystem:no_update_news = true
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = DP-2, 1920x1080@144, 0x0, 1
 monitor=DP-3,1920x1080@144,auto-left,1
-monitor=HDMI-A-1,1920x1080@144,auto-right,1
+monitor=HDMI-A-1,1920x1080@120,auto-right,1
 
 ###################
 ### MY PROGRAMS ###
@@ -318,3 +318,7 @@ workspace=9,monitor:HDMI-A-1
 
 windowrule = suppressevent maximize, class:.* # You'll probably like this.
 windowrule = center, class:^(1Password)$
+windowrule = maximize, title:Work
+windowrule = monitor 1, title:Work
+
+# vim:ts=2 sw=2 et:
