--- a/nchat/ui.conf
+++ b/nchat/ui.conf
@@ -1,9 +1,13 @@
 attachment_indicator=📎
 attachment_open_command=
+auto_compose_command=
+auto_compose_enabled=0
+auto_compose_history_count=25
 away_status_indication=0
 call_command=
 chat_picker_sorted_alphabetically=0
 confirm_deletion=1
+confirm_send_pasted_image=1
 desktop_notify_active=1
 desktop_notify_command=
 desktop_notify_connectivity=0
