feat: obs binds + switch to qutebrowser

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor=HDMI-A-1,1920x1080@120,auto-right,1
 
 # Set programs that you use
 $terminal = ghostty
-$browser = google-chrome-stable --password-store=basic
+$browser = qutebrowser
 $menu = tofi-run | xargs hyprctl dispatch exec
 
 
@@ -237,6 +237,13 @@ bindl=, XF86AudioPrev, exec, playerctl previous
 bindle= $mainMod, D, exec, makoctl dismiss
 bindle= $mainMod, C, exec, makoctl dismiss --all
 bindle= $mainMod, G, exec, makoctl invoke & makoctl dismiss
+
+# OBS Control binds
+bindl= $mainMod, F1, exec, $HOME/.config/hypr/obs_control/obs-scene-switch.sh 'Screen All'
+bindl= $mainMod, F2, exec, $HOME/.config/hypr/obs_control/obs-scene-switch.sh 'Screen Left'
+bindl= $mainMod, F3, exec, $HOME/.config/hypr/obs_control/obs-scene-switch.sh 'Screen Middle'
+bindl= $mainMod, F4, exec, $HOME/.config/hypr/obs_control/obs-scene-switch.sh 'Screen Right'
+bindl= $mainMod, F5, exec, $HOME/.config/hypr/obs_control/obs-scene-switch.sh 'Cam'
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
