chores: move terminal to workspace 4

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -30,7 +30,7 @@ monitor = HDMI-A-1,preferred,auto,auto,mirror,eDP-1
 
 # Set programs that you use
 $terminal = ghostty
-$browser = google-chrome-stable --password-store=basic
+$browser = qutebrowser
 $menu = tofi-run | xargs hyprctl dispatch exec
 
 
@@ -46,7 +46,7 @@ exec-once = mako
 exec-once = hyprpaper
 exec-once = batsignal
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = [workspace 5 silent] $terminal
+exec-once = [workspace 4 silent] $terminal
 exec-once = [workspace 1 silent] $browser
 exec-once = [workspace 9] 1password
 
