feat: faster ghostty start + pcloudcc essential

--- a/ghostty/config
+++ b/ghostty/config
@@ -48,3 +48,7 @@ background-blur = 0
 
 # auto start tmux
 command = ~/.config/ghostty/tmux-ghostty
+
+# don't quit
+# => systemctl enable --user app-com.mitchellh.ghostty.service
+quit-after-last-window-closed = false
