--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,7 +27,7 @@ monitor=HDMI-A-1,1920x1080@120,auto-right,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = ghostty
+$terminal = ghostty +new-window
 $browser = qutebrowser
 $menu = tofi-run | xargs hyprctl dispatch exec
 
